Added text-shadow to text on site

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <div id="main-container">
-      <div id="inner-container">
+      <main id="inner-container">
         <!-- Header -->
          <header>
            <h1>Generate a <span id="h1-span">random password</span></h1>
-           <p id="tagline">Never use an insecure password again.</p>
+           <h2 id="tagline">Never use an insecure password again.</h2>
          </header>
         <div class="divider"></div>
         <!-- Options Area -->
@@ -64,7 +64,7 @@
             <div tabindex="0" class="password" aria-describedby="password-6" ></div>
           </div>
         </div>
-      </div>
+      </main>
     </div>
     <script type="module" src="/src/script.js"></script>
   </body>
